tests/ui/suggestions/issue-98562.stderr
error[E0046]: not all trait items implemented, missing: `baz`
  --> $DIR/issue-98562.rs:7:1
   |
LL | impl TraitA<u8, u16, u32> for X {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `baz` in implementation
   |
   = help: implement the missing item: `fn baz<U: TraitC<I1 = u8, I2 = u16> + TraitD<I3 = u32>, V: TraitD<I3 = u8>>(_: U, _: V) -> Self where U: TraitE, U: TraitB, <U as TraitB>::Item: Copy { todo!() }`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0046`.
